# Bridging_Program_QA_Automation

./: README.md  pyproject.toml
test_LinkedIn_Project/pages/: base_page.py  s1_index_page.py  s1_index_page_locators.py  s1_signin_failure_page.py  s1_signin_failure_page_locators.py  s1_signin_page.py  s1_signin_page_locators.py  s1_signin_success_page.py  s1_signin_success_page_locators.py  s1_signout_page.py  s1_signout_page_locators.py  s1_signout_success_page.py  s1_signout_success_page_locators.py  s2_react_to_message_page.py  s2_react_to_message_page_locators.py  s2_send_emoji_page.py  s2_send_emoji_page_locators.py  s2_send_image_page.py  s2_send_image_page_locators.py  s2_send_link_page.py  s2_send_link_page_locators.py  s2_send_message_page.py  s2_send_message_page_locators.py  s3_advanced_search_page.py  s3_advanced_search_page_locators.py  s3_job_alerts_page.py  s3_job_alerts_page_locators.py  s3_job_search_page.py  s3_job_search_page_locators.py  s3_job_search_success_page.py  s3_job_search_success_page_locators.py
test_LinkedIn_Project/resources/: constants.py
test_LinkedIn_Project/test_reports/: report_job_search.html  report_job_search.xml  report_login_logout.html  report_login_logout.xml  report_messaging.html  report_messaging.xml
test_LinkedIn_Project/tests/: conftest.py  test_job_search.py  test_login_logout.py  test_messaging.py  test_utils.py
